--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -35,7 +35,8 @@
 
     <!--Conteudo da página-->
     <div class="container-fluid corpo">
-        <div class="pt-5 pt-5 m-5">
+        <div class="pt-3 m-5">
+            <h1 class="display-4">Tabela de Funcionários</h1>
             <form>
                 <table class="table table-dark table-hover table-responsive-lg table-striped" id="tblView">
                     <thead class="text-lg-center">
